-added main hero moved function

--- a/SFML_GAME_PROJECT/SFML_GAME_PROJECT.vcxproj
+++ b/SFML_GAME_PROJECT/SFML_GAME_PROJECT.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="additional.hpp" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Game.h" />
   </ItemGroup>
