--- a/SFML_GAME_PROJECT/SFML_GAME_PROJECT.vcxproj.filters
+++ b/SFML_GAME_PROJECT/SFML_GAME_PROJECT.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Character.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="additional.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
