--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="map_t.cpp" />
     <ClCompile Include="obPreference.cpp" />
     <ClCompile Include="physOb_t.cpp" />
+    <ClCompile Include="player_t.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="characterStats_t.h" />
@@ -136,6 +137,7 @@
     <ClInclude Include="map_t.h" />
     <ClInclude Include="obPreference.h" />
     <ClInclude Include="physOb_t.h" />
+    <ClInclude Include="player_t.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
