--- a/Game_alpha/Game_alpha.vcxproj.filters
+++ b/Game_alpha/Game_alpha.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClCompile Include="player_t.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="obPreference_t.cpp">
+    <ClCompile Include="obPreference.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -59,7 +59,7 @@
     <ClInclude Include="player_t.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="obPreference_t.h">
+    <ClInclude Include="obPreference.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
