--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="characterStats_t.cpp" />
     <ClCompile Include="character_t.cpp" />
     <ClCompile Include="game_t.cpp" />
+    <ClCompile Include="ground_t.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map_t.cpp" />
     <ClCompile Include="obPreference.cpp" />
@@ -131,9 +132,11 @@
     <ClCompile Include="player_t.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="additional.h" />
     <ClInclude Include="characterStats_t.h" />
     <ClInclude Include="character_t.h" />
     <ClInclude Include="game_t.h" />
+    <ClInclude Include="ground_t.h" />
     <ClInclude Include="map_t.h" />
     <ClInclude Include="obPreference.h" />
     <ClInclude Include="physOb_t.h" />
