--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -122,6 +122,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bullet_t.cpp" />
+    <ClCompile Include="CharacterState_t.cpp" />
     <ClCompile Include="characterTimers_t.cpp" />
     <ClCompile Include="character_t.cpp" />
     <ClCompile Include="cursor_t.cpp" />
@@ -139,6 +140,7 @@
   <ItemGroup>
     <ClInclude Include="additional.h" />
     <ClInclude Include="bullet_t.h" />
+    <ClInclude Include="CharacterState_t.h" />
     <ClInclude Include="characterStats_t.h" />
     <ClInclude Include="characterTimers_t.h" />
     <ClInclude Include="character_t.h" />
