--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="cursor_t.cpp" />
     <ClCompile Include="game_t.cpp" />
     <ClCompile Include="ground_t.cpp" />
+    <ClCompile Include="keyboardController.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map_t.cpp" />
     <ClCompile Include="Npc_t.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="cursor_t.h" />
     <ClInclude Include="game_t.h" />
     <ClInclude Include="ground_t.h" />
+    <ClInclude Include="keyboardController.h" />
     <ClInclude Include="map_t.h" />
     <ClInclude Include="Npc_t.h" />
     <ClInclude Include="obPreference.h" />
