--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -127,7 +127,7 @@
     <ClCompile Include="character_t.cpp" />
     <ClCompile Include="cursor_t.cpp" />
     <ClCompile Include="Effect_t.cpp" />
-    <ClCompile Include="game_t.cpp" />
+    <ClCompile Include="GameEngine_t.cpp" />
     <ClCompile Include="ground_t.cpp" />
     <ClCompile Include="InterfaceButton.cpp" />
     <ClCompile Include="InterfaceContent.cpp" />
@@ -151,7 +151,7 @@
     <ClInclude Include="character_t.h" />
     <ClInclude Include="cursor_t.h" />
     <ClInclude Include="Effect_t.h" />
-    <ClInclude Include="game_t.h" />
+    <ClInclude Include="GameEngine_t.h" />
     <ClInclude Include="ground_t.h" />
     <ClInclude Include="InterfaceButton.h" />
     <ClInclude Include="InterfaceContent.h" />
