--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -131,8 +131,10 @@
     <ClCompile Include="Effect_t.cpp" />
     <ClCompile Include="GameEngine_t.cpp" />
     <ClCompile Include="ground_t.cpp" />
+    <ClCompile Include="InterfaceBar.cpp" />
     <ClCompile Include="InterfaceButton.cpp" />
     <ClCompile Include="InterfaceContent.cpp" />
+    <ClCompile Include="InterfaceEngine_t.cpp" />
     <ClCompile Include="InterfaceOb_t.cpp" />
     <ClCompile Include="keyboardController.cpp" />
     <ClCompile Include="Level_t.cpp" />
@@ -155,8 +157,10 @@
     <ClInclude Include="Effect_t.h" />
     <ClInclude Include="GameEngine_t.h" />
     <ClInclude Include="ground_t.h" />
+    <ClInclude Include="InterfaceBar.h" />
     <ClInclude Include="InterfaceButton.h" />
     <ClInclude Include="InterfaceContent.h" />
+    <ClInclude Include="InterfaceEngine_t.h" />
     <ClInclude Include="InterfaceOb_t.h" />
     <ClInclude Include="keyboardController.h" />
     <ClInclude Include="Level_t.h" />
