start design of Interface content

--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -135,7 +135,7 @@
     <ClCompile Include="InterfaceButton.cpp" />
     <ClCompile Include="InterfaceContent.cpp" />
     <ClCompile Include="InterfaceEngine_t.cpp" />
-    <ClCompile Include="InterfaceOb_t.cpp" />
+    <ClCompile Include="InterfaceWindow_t.cpp" />
     <ClCompile Include="keyboardController.cpp" />
     <ClCompile Include="Level_t.cpp" />
     <ClCompile Include="main.cpp" />
@@ -161,7 +161,7 @@
     <ClInclude Include="InterfaceButton.h" />
     <ClInclude Include="InterfaceContent.h" />
     <ClInclude Include="InterfaceEngine_t.h" />
-    <ClInclude Include="InterfaceOb_t.h" />
+    <ClInclude Include="InterfaceWindow_t.h" />
     <ClInclude Include="keyboardController.h" />
     <ClInclude Include="Level_t.h" />
     <ClInclude Include="map_t.h" />
@@ -169,7 +169,6 @@
     <ClInclude Include="obPreference.h" />
     <ClInclude Include="physOb_t.h" />
     <ClInclude Include="player_t.h" />
-    <ClInclude Include="settings.h" />
     <ClInclude Include="skillObGenerator_t.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
