designed main menui class

--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="keyboardController.cpp" />
     <ClCompile Include="Level_t.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mainMenu_t.cpp" />
     <ClCompile Include="map_t.cpp" />
     <ClCompile Include="Npc_t.cpp" />
     <ClCompile Include="obPreference.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="InterfaceWindow_t.h" />
     <ClInclude Include="keyboardController.h" />
     <ClInclude Include="Level_t.h" />
+    <ClInclude Include="mainMenu_t.h" />
     <ClInclude Include="map_t.h" />
     <ClInclude Include="Npc_t.h" />
     <ClInclude Include="obPreference.h" />
