--- a/Game_alpha/Game_alpha.vcxproj
+++ b/Game_alpha/Game_alpha.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainMenu_t.cpp" />
     <ClCompile Include="map_t.cpp" />
+    <ClCompile Include="mission_t.cpp" />
     <ClCompile Include="Npc_t.cpp" />
     <ClCompile Include="obPreference.cpp" />
     <ClCompile Include="physOb_t.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="Level_t.h" />
     <ClInclude Include="mainMenu_t.h" />
     <ClInclude Include="map_t.h" />
+    <ClInclude Include="mission_t.h" />
     <ClInclude Include="Npc_t.h" />
     <ClInclude Include="obPreference.h" />
     <ClInclude Include="physOb_t.h" />
